test/conformance/kuttl/verifyImages/keyless-mutatedigest-verifydigest-required/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: keyless-mutatedigest-verifydigest-required
status:
  ready: true
