test/conformance/kuttl/verifyImages/keyless-mutatedigest-verifydigest-required/02-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kyverno.io/verify-images: '{"ghcr.io/chipzoller/zulu@sha256:476b21f1a75dc90fac3579ee757f4607bb5546f476195cf645c54badf558c0db":true}'
  name: zulu
  namespace: default
spec:
  containers:
  - image: ghcr.io/chipzoller/zulu:v0.0.14@sha256:476b21f1a75dc90fac3579ee757f4607bb5546f476195cf645c54badf558c0db
    name: zulu
